--- a/app/src/main/res/layout/bottom_recipe_detail.xml
+++ b/app/src/main/res/layout/bottom_recipe_detail.xml
@@ -1,78 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bottom_recipe_detail_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     app:behavior_hideable="true"
     app:behavior_peekHeight="@dimen/bottom_recipe_detail_peek_height"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/bottom_recipe_detail_peak"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/bottom_recipe_detail_peek_height"
-        android:background="@drawable/bg_bottom_peak">
-
-        <TextView
-            android:id="@+id/bottom_recipe_detail_weight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
-            android:drawablePadding="8dp"
-            android:gravity="center_vertical"
-            android:text="100 gram"
-            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/guideline"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:drawableLeft="@drawable/ic_weight"
-            tools:drawableTint="@color/white" />
-
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.5"
-            tools:layout_editor_absoluteX="192dp"
-            tools:layout_editor_absoluteY="0dp" />
-
-        <TextView
-            android:id="@+id/bottom_recipe_detail_serving"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginRight="32dp"
-            android:layout_marginStart="32dp"
-            android:layout_marginTop="16dp"
-            android:drawablePadding="8dp"
-            android:gravity="center_vertical"
-            android:text="4 servings"
-            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/guideline"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:drawableLeft="@drawable/ic_serving"
-            tools:drawableTint="@color/white" />
-
-    </android.support.constraint.ConstraintLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
+    <android.support.constraint.Guideline
+        android:id="@+id/bottom_recipe_detail_left_vertical_guideline"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/gray_800">
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.25"
+        tools:layout_editor_absoluteX="96dp"
+        tools:layout_editor_absoluteY="0dp" />
 
-    </FrameLayout>
-</LinearLayout>
+    <android.support.constraint.Guideline
+        android:id="@+id/bottom_recipe_detail_right_vertical_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.75"
+        tools:layout_editor_absoluteX="288dp"
+        tools:layout_editor_absoluteY="0dp" />
+
+    <ImageView
+        android:id="@+id/bottom_recipe_detail_peak"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:scaleType="fitXY"
+        android:tint="@color/primary"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/bg_bottom_peak" />
+
+    <TextView
+        android:id="@+id/bottom_recipe_detail_weight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawablePadding="8dp"
+        android:gravity="center_vertical"
+        android:text="100 gram"
+        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
+        app:layout_constraintBottom_toBottomOf="@+id/bottom_recipe_detail_peak"
+        app:layout_constraintLeft_toLeftOf="@+id/bottom_recipe_detail_left_vertical_guideline"
+        app:layout_constraintRight_toLeftOf="@+id/bottom_recipe_detail_left_vertical_guideline"
+        app:layout_constraintTop_toTopOf="@+id/bottom_recipe_detail_peak"
+        tools:drawableLeft="@drawable/ic_weight"
+        tools:drawableTint="@color/white" />
+
+    <TextView
+        android:id="@+id/bottom_recipe_detail_serving"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:drawablePadding="8dp"
+        android:gravity="center_vertical"
+        android:text="4 servings"
+        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
+        app:layout_constraintBottom_toBottomOf="@+id/bottom_recipe_detail_peak"
+        app:layout_constraintLeft_toLeftOf="@+id/bottom_recipe_detail_right_vertical_guideline"
+        app:layout_constraintRight_toLeftOf="@+id/bottom_recipe_detail_right_vertical_guideline"
+        app:layout_constraintTop_toTopOf="@+id/bottom_recipe_detail_peak"
+        tools:drawableLeft="@drawable/ic_serving"
+        tools:drawableTint="@color/white" />
+
+    <ImageView
+        android:id="@+id/bottom_recipe_detail_picker_bg"
+        android:layout_width="0dp"
+        android:layout_height="160dp"
+        android:background="@color/gray_200"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <NumberPicker
+        android:id="@+id/bottom_recipe_detail_weight_picker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/bottom_recipe_detail_left_vertical_guideline"
+        app:layout_constraintRight_toLeftOf="@+id/bottom_recipe_detail_left_vertical_guideline"
+        app:layout_constraintTop_toBottomOf="@+id/bottom_recipe_detail_peak" />
+
+    <NumberPicker
+        android:id="@+id/bottom_recipe_detail_serving_picker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@+id/bottom_recipe_detail_right_vertical_guideline"
+        app:layout_constraintRight_toLeftOf="@+id/bottom_recipe_detail_right_vertical_guideline"
+        app:layout_constraintTop_toBottomOf="@+id/bottom_recipe_detail_peak" />
+
+</android.support.constraint.ConstraintLayout>
