--- a/app/src/main/res/layout/bottom_recipe_detail.xml
+++ b/app/src/main/res/layout/bottom_recipe_detail.xml
@@ -5,7 +5,7 @@
     android:id="@+id/bottom_recipe_detail_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:behavior_hideable="true"
+    app:behavior_hideable="false"
     app:behavior_peekHeight="@dimen/bottom_recipe_detail_peek_height"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
