--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/activity_recipe_detail_toolbar_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
+                android:adjustViewBounds="false"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
@@ -51,32 +51,14 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/activity_recipe_detail_fab_photo"
+        android:id="@+id/activity_recipe_detail_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:tint="@color/white"
-        app:fabSize="mini"
         app:layout_anchor="@id/activity_recipe_detail_appbar"
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@drawable/ic_photo" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/activity_recipe_list_fab_cart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="80dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:tint="@color/white"
-        app:backgroundTint="?attr/colorPrimary"
-        app:fabSize="mini"
-        app:layout_anchor="@id/activity_recipe_detail_appbar"
-        app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@drawable/ic_cart" />
 
     <include layout="@layout/bottom_recipe_detail" />
 
