--- a/app/src/main/res/layout/bottom_recipe_detail.xml
+++ b/app/src/main/res/layout/bottom_recipe_detail.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:behavior_hideable="false"
-    app:behavior_peekHeight="?attr/actionBarSize"
+    app:behavior_peekHeight="48dp"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
     <android.support.constraint.Guideline
