--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -19,14 +19,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
+            app:collapsedTitleGravity="start|top"
             app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:titleEnabled="false">
+            app:expandedTitleMargin="32dp"
+            app:expandedTitleMarginBottom="64dp"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
 
             <ImageView
                 android:id="@+id/activity_recipe_detail_toolbar_image"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:adjustViewBounds="false"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
@@ -37,18 +39,21 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/activity_recipe_detail_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="parallax"
-                app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay" />
+                android:layout_height="104dp"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"
+                app:titleMarginTop="16dp" />
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/activity_recipe_detail_tabs"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="48dp"
                 android:layout_gravity="bottom"
                 app:layout_collapseMode="pin"
-                app:tabContentStart="48dp"
-                app:tabMode="scrollable" />
+                app:paddingEnd="72dp"
+                app:tabIndicatorColor="@color/white"
+                app:tabMode="scrollable"
+                app:tabTextAppearance="@style/TextAppearance.Design.Tab" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
