Add viewPager for Recipe detail's view

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="primary">#ff5722</color>
     <color name="primary_dark">#e64a19</color>
     <color name="accent">#1de9b6</color>
+    <color name="accent_translucent">#801de9b6</color>
     <color name="secondary">#ffc107</color>
     <color name="secondary_dark">#ffa000</color>
     <color name="white">#ffffff</color>
