--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,10 +1,13 @@
 <resources>
 
     <style name="AppTheme.NoActionBar">
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:colorControlHighlight">@color/accent_translucent</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowSharedElementsUseOverlay">false</item>
     </style>
 
     <style name="LabelButton" parent="Widget.AppCompat.Button.Small">
@@ -14,11 +17,6 @@
         <item name="android:minHeight">24dp</item>
         <item name="android:textAppearance">@style/TextAppearance.AppCompat.Body1</item>
         <item name="android:gravity">left|center_vertical</item>
-    </style>
-
-    <style name="LightIconButton" parent="@style/Widget.AppCompat.Button.Borderless">
-        <item name="android:tint">@color/gray_400</item>
-        <item name="android:background">?android:attr/selectableItemBackground</item>
     </style>
 
 </resources>
