--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,9 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primary</item>
         <item name="colorAccent">@color/accent</item>
+        <item name="colorControlHighlight">@color/accent_translucent</item> 
+        <item name="selectableItemBackground">@drawable/selectable_item_background</item>
+        <item name="android:selectableItemBackground">@drawable/selectable_item_background</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -27,7 +30,7 @@
 
     <style name="LightIconButton" parent="@style/Widget.AppCompat.Button.Borderless">
         <item name="android:tint">@color/gray_400</item>
-        <item name="android:background">@drawable/bg_light_icon_button</item>
+        <item name="android:background">@drawable/selectable_item_background</item>
     </style>
 
     <style name="LightIconView">
