Update styles. Update support library

--- a/app/src/main/res/layout/activity_drawer_base.xml
+++ b/app/src/main/res/layout/activity_drawer_base.xml
@@ -12,7 +12,8 @@
     <FrameLayout
         android:id="@+id/activity_drawer_base_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true" />
 
     <android.support.design.widget.NavigationView
         android:id="@+id/activity_drawer_base_nav"
