--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/activity_recipe_detail_appbar_height"
         android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/activity_recipe_detail_toolbar_layout"
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="104dp"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"
+                app:popupTheme="@style/AppTheme.PopupOverlay"
                 app:titleMarginTop="16dp" />
 
             <android.support.design.widget.TabLayout
