--- a/app/src/main/res/layout/fragment_recipe_bottom_dialog.xml
+++ b/app/src/main/res/layout/fragment_recipe_bottom_dialog.xml
@@ -19,14 +19,16 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay" />
+        app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline_vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_percent="0.5"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp" />
 
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/recipe_label_button"
