--- a/app/src/main/res/layout/activity_drawer_base.xml
+++ b/app/src/main/res/layout/activity_drawer_base.xml
@@ -9,7 +9,9 @@
     tools:contextRef=".ui.activity.BaseDrawerActivity"
     tools:openDrawer="start">
 
-    <FrameLayout
+    <!--CoordinatorLayout uses instead of FrameLayout.-->
+    <!--This ensures the fitsSystemWindows="true" gets passed onto the inflated child views.-->
+    <android.support.design.widget.CoordinatorLayout
         android:id="@+id/activity_drawer_base_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
