--- a/app/src/main/res/layout/fragment_recipe_detail_main.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/recipe_detail_main_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
