--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -13,10 +13,14 @@
         <item>@drawable/ic_recipe_category</item>       <!-- category    -->
         <item>@drawable/ic_food</item>                  <!-- food        -->
     </integer-array>
-    <string-array name="devlight">
-        <item>@color/primary</item>
-        <item>@color/primary_dark</item>
-        <item>@color/accent</item>
-        <item>@color/accent_translucent</item>
+    <string-array name="nutrition_colors">
+        <item>@color/nutrition_carbohydrate</item>
+        <item>@color/nutrition_protein</item>
+        <item>@color/nutrition_fat</item>
+    </string-array>
+    <string-array name="nutrition_titles">
+        <item>@string/nutrition_carbohydrate</item>
+        <item>@string/nutrition_protein</item>
+        <item>@string/nutrition_fat</item>
     </string-array>
 </resources>
