--- a/app/src/main/res/layout/fragment_recipe_detail_main.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail_main.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/recipe_detail_main_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <include layout="@layout/view_nutrition" />
+    <devlight.io.library.ArcProgressStackView
+        android:id="@+id/nutrition_chart"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:apsv_animated="true"
+        app:apsv_dragged="false"
+        app:apsv_draw_width="75%"
+        app:apsv_indicator_orientation="horizontal"
+        app:apsv_leveled="false"
+        app:apsv_model_bg_enabled="false"
+        app:apsv_model_offset="4dp"
+        app:apsv_preview_bg="@color/gray_200"
+        app:apsv_preview_colors="@array/nutrition_colors"
+        app:apsv_rounded="false"
+        app:apsv_shadowed="true"
+        app:apsv_start_angle="240"
+        app:apsv_sweep_angle="360" />
 
 </LinearLayout>
