--- a/app/src/main/res/drawable/bg_circle_accent_stroke.xml
+++ b/app/src/main/res/drawable/bg_circle_accent_stroke.xml
@@ -2,8 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
+    <solid android:color="@color/accent" />
+
     <stroke
-        android:width="16dp"
-        android:color="@color/accent" />
+        android:width="8dp"
+        android:color="@color/accent_dark" />
 
 </shape>
