--- a/app/src/main/res/layout/view_nutrition.xml
+++ b/app/src/main/res/layout/view_nutrition.xml
@@ -1,85 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.percent.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_recipe_front_image_container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="32dp">
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        app:layout_aspectRatio="100%"
+        app:layout_widthPercent="100%">
 
         <devlight.io.library.ArcProgressStackView
             android:id="@+id/nutrition_chart"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:apsv_animated="true"
+            app:apsv_animation_duration="3000"
             app:apsv_dragged="false"
-            app:apsv_draw_width="75%"
-            app:apsv_leveled="true"
-            app:apsv_model_bg_enabled="false"
-            app:apsv_model_offset="4dp"
-            app:apsv_preview_bg="@color/primary"
+            app:apsv_draw_width="65%"
+            app:apsv_indicator_orientation="horizontal"
+            app:apsv_interpolator="@android:anim/overshoot_interpolator"
+            app:apsv_leveled="false"
+            app:apsv_model_bg_enabled="true"
+            app:apsv_model_offset="-4dp"
+            app:apsv_preview_bg="@color/gray_200"
             app:apsv_preview_colors="@array/nutrition_colors"
-            app:apsv_rounded="false"
-            app:apsv_shadowed="true"
+            app:apsv_rounded="true"
+            app:apsv_shadowed="false"
             app:apsv_sweep_angle="270" />
     </FrameLayout>
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_gravity="top|start"
+    <TextView
+        android:id="@+id/nutrition_energy"
+        android:layout_gravity="center"
+        android:background="@drawable/bg_circle_accent_stroke"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
         app:layout_aspectRatio="100%"
-        app:layout_widthPercent="50%">
+        app:layout_widthPercent="28%"
+        tools:text="200\nkCal" />
+
+    <LinearLayout
+        android:layout_gravity="top|start"
+        android:gravity="center_vertical|end"
+        android:orientation="vertical"
+        android:paddingEnd="24dp"
+        android:paddingRight="24dp"
+        app:layout_aspectRatio="142%"
+        app:layout_widthPercent="50%"
+        tools:ignore="RtlSymmetry">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/nutrition_carbohydrate_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
             android:text="@string/nutrition_carbohydrate"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/nutrition_protein_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
             android:text="@string/nutrition_protein"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/nutrition_fat_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
             android:text="@string/nutrition_fat"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="10dp"
-            android:text="@string/nutrition_energy"
-            android:textAllCaps="false"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="?android:attr/textColorPrimary"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
 </android.support.percent.PercentFrameLayout>
