--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="primary">#ff5722</color>
     <color name="primary_dark">#e64a19</color>
     <color name="accent">#1de9b6</color>
-    <color name="accent_bg">#801de9b6</color>
+    <color name="accent_dark">#00bfa5</color>
     <color name="white">#ffffff</color>
     <color name="white_a20">#33ffffff</color>
     <color name="black">#000000</color>
@@ -18,11 +18,9 @@
     <color name="gray_800">#424242</color>
     <color name="gray_900">#212121</color>
     <color name="nutrition_carbohydrate">#8bc34a</color>
-    <color name="nutrition_carbohydrate_bg">#808bc34a</color>
     <color name="nutrition_protein">#f44336</color>
-    <color name="nutrition_protein_bg">#80f44336</color>
     <color name="nutrition_fat">#ffc107</color>
-    <color name="nutrition_fat_bg">#80ffc107</color>
-    <color name="nutrition_energy">#1de9b6</color>
-    <color name="nutrition_energy_bg">#1de9b6</color>
+    <color name="nutrition_carbohydrate_bg">#e8f5e9</color>
+    <color name="nutrition_protein_bg">#ffebee</color>
+    <color name="nutrition_fat_bg">#fff8e1</color>
 </resources>
