--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -10,4 +10,11 @@
         <item>@color/nutrition_protein_bg</item>
         <item>@color/nutrition_fat_bg</item>
     </integer-array>
+    <!-- ArcProgressStackView. Forked from 'devlight.io:arcprogressstackview:1.0.4' -->
+    <string-array name="default_preview">
+        <item>#ff670729</item>
+        <item>#ff7a0c2d</item>
+        <item>#ff96092d</item>
+        <item>#ffa10a37</item>
+    </string-array>
 </resources>
