--- a/app/src/main/res/layout/fragment_recipe_detail_main.xml
+++ b/app/src/main/res/layout/fragment_recipe_detail_main.xml
@@ -5,13 +5,29 @@
     android:layout_height="wrap_content"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <LinearLayout
-        android:id="@+id/recipe_detail_main_root"
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        app:cardCornerRadius="4dp"
+        app:cardElevation="4dp"
+        app:cardUseCompatPadding="true"
+        app:contentPadding="16dp">
 
-        <include layout="@layout/view_nutrition" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    </LinearLayout>
+
+            <android.support.percent.PercentFrameLayout
+                android:id="@+id/recipe_detail_main_chart_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <include
+                    layout="@layout/view_nutrition_chart_circle"
+                    app:layout_aspectRatio="100%"
+                    app:layout_widthPercent="100%" />
+            </android.support.percent.PercentFrameLayout>
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
 </android.support.v4.widget.NestedScrollView>
