Update chart layout

--- a/app/src/main/res/layout/view_nutrition_chart_circle.xml
+++ b/app/src/main/res/layout/view_nutrition_chart_circle.xml
@@ -23,17 +23,17 @@
             android:gravity="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
             app:layout_aspectRatio="100%"
-            app:layout_widthPercent="29%"
+            app:layout_widthPercent="28%"
             tools:text="200\nkCal" />
 
     </android.support.percent.PercentFrameLayout>
 
     <android.support.constraint.Guideline
-        android:id="@+id/nutrition_horizontal_center_guideline"
+        android:id="@+id/nutrition_horizontal_guideline"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_percent="0.45" />
 
     <android.support.constraint.Guideline
         android:id="@+id/nutrition_carbohydrate_horizontal_guideline"
@@ -57,11 +57,11 @@
         app:layout_constraintGuide_percent="0.29" />
 
     <android.support.constraint.Guideline
-        android:id="@+id/nutrition_vertical_center_guideline"
+        android:id="@+id/nutrition_vertical_guideline"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_percent="0.45" />
 
     <android.support.constraint.Guideline
         android:id="@+id/nutrition_carbohydrate_vertical_guideline"
@@ -88,14 +88,14 @@
         android:id="@+id/nutrition_carbohydrate_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="32dp"
+        android:layout_marginRight="8dp"
         android:background="@drawable/bg_rectangle_stroke_c"
         android:padding="4dp"
         android:text="@string/nutrition_carbohydrate"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/nutrition_carbohydrate"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_carbohydrate_horizontal_guideline"
-        app:layout_constraintRight_toLeftOf="@+id/nutrition_vertical_center_guideline"
+        app:layout_constraintRight_toLeftOf="@+id/nutrition_vertical_guideline"
         app:layout_constraintTop_toTopOf="@+id/nutrition_carbohydrate_horizontal_guideline"
         tools:ignore="RtlHardcoded" />
 
@@ -104,14 +104,14 @@
         android:id="@+id/nutrition_protein_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="32dp"
+        android:layout_marginRight="8dp"
         android:background="@drawable/bg_rectangle_stroke_p"
         android:padding="4dp"
         android:text="@string/nutrition_protein"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/nutrition_protein"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_protein_horizontal_guideline"
-        app:layout_constraintRight_toLeftOf="@+id/nutrition_vertical_center_guideline"
+        app:layout_constraintRight_toLeftOf="@+id/nutrition_vertical_guideline"
         app:layout_constraintTop_toTopOf="@+id/nutrition_protein_horizontal_guideline"
         tools:ignore="RtlHardcoded" />
 
@@ -119,20 +119,20 @@
         android:id="@+id/nutrition_fat_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="32dp"
+        android:layout_marginRight="8dp"
         android:background="@drawable/bg_rectangle_stroke_f"
         android:padding="4dp"
         android:text="@string/nutrition_fat"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/nutrition_fat"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_fat_horizontal_guideline"
-        app:layout_constraintRight_toLeftOf="@+id/nutrition_vertical_center_guideline"
+        app:layout_constraintRight_toLeftOf="@+id/nutrition_vertical_guideline"
         app:layout_constraintTop_toTopOf="@+id/nutrition_fat_horizontal_guideline"
         tools:ignore="RtlHardcoded" />
 
     <View
         android:id="@+id/nutrition_carbohydrate_title_bg_line"
-        android:layout_width="32dp"
+        android:layout_width="8dp"
         android:layout_height="1dp"
         android:background="@color/nutrition_carbohydrate_bg"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_carbohydrate_horizontal_guideline"
@@ -141,7 +141,7 @@
 
     <View
         android:id="@+id/nutrition_protein_title_bg_line"
-        android:layout_width="32dp"
+        android:layout_width="8dp"
         android:layout_height="1dp"
         android:background="@color/nutrition_protein_bg"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_protein_horizontal_guideline"
@@ -150,7 +150,7 @@
 
     <View
         android:id="@+id/nutrition_fat_title_bg_line"
-        android:layout_width="32dp"
+        android:layout_width="8dp"
         android:layout_height="1dp"
         android:background="@color/nutrition_fat_bg"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_fat_horizontal_guideline"
@@ -161,12 +161,13 @@
         android:id="@+id/nutrition_carbohydrate_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/bg_rectangle_stroke_c"
         android:padding="4dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/nutrition_carbohydrate"
-        app:layout_constraintBottom_toBottomOf="@id/nutrition_horizontal_center_guideline"
+        app:layout_constraintBottom_toBottomOf="@id/nutrition_horizontal_guideline"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_carbohydrate_vertical_guideline"
         app:layout_constraintRight_toLeftOf="@id/nutrition_carbohydrate_vertical_guideline"
         tools:text="50%" />
@@ -175,12 +176,12 @@
         android:id="@+id/nutrition_protein_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/bg_rectangle_stroke_p"
         android:padding="4dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/nutrition_protein"
-        app:layout_constraintBottom_toBottomOf="@id/nutrition_horizontal_center_guideline"
+        app:layout_constraintBottom_toBottomOf="@id/nutrition_horizontal_guideline"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_protein_vertical_guideline"
         app:layout_constraintRight_toLeftOf="@id/nutrition_protein_vertical_guideline"
         tools:text="30%" />
@@ -189,12 +190,12 @@
         android:id="@+id/nutrition_fat_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/bg_rectangle_stroke_f"
         android:padding="4dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
         android:textColor="@color/nutrition_fat"
-        app:layout_constraintBottom_toBottomOf="@id/nutrition_horizontal_center_guideline"
+        app:layout_constraintBottom_toBottomOf="@id/nutrition_horizontal_guideline"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_fat_vertical_guideline"
         app:layout_constraintRight_toLeftOf="@id/nutrition_fat_vertical_guideline"
         tools:text="30%" />
@@ -202,7 +203,7 @@
     <View
         android:id="@+id/nutrition_carbohydrate_value_bg_line"
         android:layout_width="1dp"
-        android:layout_height="32dp"
+        android:layout_height="8dp"
         android:background="@color/nutrition_carbohydrate_bg"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_carbohydrate_vertical_guideline"
         app:layout_constraintRight_toLeftOf="@id/nutrition_carbohydrate_vertical_guideline"
@@ -211,7 +212,7 @@
     <View
         android:id="@+id/nutrition_protein_value_bg_line"
         android:layout_width="1dp"
-        android:layout_height="32dp"
+        android:layout_height="8dp"
         android:background="@color/nutrition_protein_bg"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_protein_vertical_guideline"
         app:layout_constraintRight_toLeftOf="@id/nutrition_protein_vertical_guideline"
@@ -220,7 +221,7 @@
     <View
         android:id="@+id/nutrition_fat_value_bg_line"
         android:layout_width="1dp"
-        android:layout_height="32dp"
+        android:layout_height="8dp"
         android:background="@color/nutrition_fat_bg"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_fat_vertical_guideline"
         app:layout_constraintRight_toLeftOf="@id/nutrition_fat_vertical_guideline"
